data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1318.wast
;; 9.  *Test Description*: Validate the correct execution and operand stack consistency when a `br` instruction within a nested exported function targets a deeply nested loop in an imported module.     *Constraint Being Checked*: Ensures correct resolution and stack unwinding during complex branching operations when deeply nested contexts exist across modules.

(assert_invalid
  (module 
    (import "m" "func" (func $imported (param i32)))
    (func (export "exported") (result i32)
      (block (result i32) 
        (loop (result i32) 
          (call $imported (i32.const 1))
          (br 1)
        )
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)